[gd_scene format=4 uid="uid://bq8b1hv10jtr0"]

[ext_resource type="Script" uid="uid://cmnmdmgutt0t0" path="res://scripts/level_config.gd" id="1_1j2ip"]
[ext_resource type="Script" uid="uid://de0qurd6w0sdi" path="res://scripts/maskable_tilemap.gd" id="1_f6f60"]
[ext_resource type="TileSet" uid="uid://dptm01tileset" path="res://art/Images/Tilemaps/tilemap_01.tres" id="2_ye5oi"]
[ext_resource type="PackedScene" uid="uid://cyfopgcmsew45" path="res://scenes/player.tscn" id="3_m00k7"]
[ext_resource type="Script" uid="uid://be1x5xk2wnhi8" path="res://scripts/maskable_behavior.gd" id="3_yn8rc"]
[ext_resource type="Texture2D" uid="uid://b8fd6qd0g07mb" path="res://art/Images/Backgrounds/bg_03_gradient.png" id="6_ye5oi"]

[node name="game_01" type="Node2D" unique_id=2096551147]

[node name="level_config" type="Node" parent="." unique_id=885048635]
script = ExtResource("1_1j2ip")
bit_0 = true

[node name="BackgroundLayer" type="Parallax2D" parent="." unique_id=83914724]
scroll_scale = Vector2(0.1, 0.1)

[node name="BackgroundImage" type="Sprite2D" parent="BackgroundLayer" unique_id=1749065152]
position = Vector2(656, 313)
scale = Vector2(0.49072263, 0.42480466)
texture = ExtResource("6_ye5oi")

[node name="tilemap_always" type="TileMapLayer" parent="." unique_id=298539414]
tile_map_data = PackedByteArray("AAATABQAAAAJAAkAAAASABcAAAAJAAkAAAATABcAAAAJAAkAAAAUABcAAAAJAAkAAAARABcAAAAJAAkAAAA=")
tile_set = ExtResource("2_ye5oi")
script = ExtResource("1_f6f60")

[node name="tilemap_0" type="TileMapLayer" parent="." unique_id=840074273]
tile_map_data = PackedByteArray("AAAAABcAAAAJAAUAAAABABcAAAAKAAUAAAACABcAAAAKAAUAAAADABcAAAAKAAUAAAAEABcAAAAKAAUAAAAFABcAAAAKAAUAAAAGABcAAAAKAAUAAAAHABcAAAAKAAUAAAAIABcAAAALAAUAAAAMABcAAAAJAAUAAAANABcAAAAKAAUAAAAOABcAAAAKAAUAAAAPABcAAAAKAAUAAAAQABcAAAAKAAUAAAARABcAAAAKAAUAAAASABcAAAAKAAUAAAATABcAAAAKAAUAAAAUABcAAAALAAUAAAA=")
tile_set = ExtResource("2_ye5oi")
script = ExtResource("1_f6f60")

[node name="MaskableBehavior" type="Node" parent="tilemap_0" unique_id=1886600958]
script = ExtResource("3_yn8rc")

[node name="tilemap_1" type="TileMapLayer" parent="." unique_id=754066882]
tile_map_data = PackedByteArray("AAAJABgAAAAPAAYAAAAJABkAAAAPAAYAAAAKABgAAAAPAAYAAAAKABkAAAAPAAYAAAALABgAAAAPAAYAAAALABkAAAAPAAYAAAAJABcAAAAPAAUAAAAKABcAAAAPAAUAAAALABcAAAAPAAUAAAAJABoAAAAPAAYAAAAKABoAAAAPAAYAAAALABoAAAAPAAYAAAA=")
tile_set = ExtResource("2_ye5oi")
script = ExtResource("1_f6f60")

[node name="MaskableBehavior" type="Node" parent="tilemap_1" unique_id=480062592]
script = ExtResource("3_yn8rc")
bit_index = 1

[node name="tilemap_2" type="TileMapLayer" parent="." unique_id=43596102]
position = Vector2(-2, 0)
tile_set = ExtResource("2_ye5oi")
script = ExtResource("1_f6f60")

[node name="MaskableBehavior" type="Node" parent="tilemap_2" unique_id=998158842]
script = ExtResource("3_yn8rc")
bit_index = 2

[node name="tilemap_3" type="TileMapLayer" parent="." unique_id=1708417475]
position = Vector2(-2, 0)
tile_set = ExtResource("2_ye5oi")
script = ExtResource("1_f6f60")

[node name="MaskableBehavior" type="Node" parent="tilemap_3" unique_id=806094233]
script = ExtResource("3_yn8rc")
bit_index = 3

[node name="Player" parent="." unique_id=1785403490 instance=ExtResource("3_m00k7")]
position = Vector2(34, 323)
scale = Vector2(0.25, 0.25)
